<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View style="@style/LineStyleE5E5E5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rise_number_text_color_white"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_5"
        android:paddingLeft="@dimen/padding_10"
        android:paddingRight="@dimen/padding_10"
        android:paddingTop="@dimen/padding_5">

        <TextView
            style="@style/FontStyleGrey"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:text="@string/act_check_order_yuezhifu" />

        <TextView
            style="@style/FontStyleBlack"
            android:text="@string/act_check_order_balance" />

        <TextView
            style="@style/FontStyleBlack"
            android:text="@string/act_check_order_price_sign"
            android:textSize="@dimen/text_font_12" />

        <TextView
            android:id="@+id/payment_balance"
            style="@style/FontStyleBlack"
            android:text="0.00"
            android:textSize="@dimen/text_font_17" />

        <com.lzyc.ybtappcal.view.SwitchButtom
            android:id="@+id/payment_balance_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_10" />

    </LinearLayout>

    <View style="@style/LineStyleE5E5E5" />

    <View style="@style/LineStyleE5E5E5"
        android:layout_marginTop="@dimen/padding_10"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@color/rise_number_text_color_white"
        android:orientation="vertical">

        <TextView
            style="@style/FontStyleGrey"
            android:padding="@dimen/padding_10"
            android:textSize="@dimen/text_font_14"
            android:text="@string/act_check_order_payment"/>

        <View style="@style/LineStyleE5E5E5" />


        <LinearLayout
            android:id="@+id/btn_aliPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10"
            android:gravity="center"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/icon_zhifubao"/>

            <TextView
                style="@style/FontStyleBlack"
                android:layout_marginLeft="@dimen/padding_10"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:text="@string/pay_zhifubao"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:checked="true"
                android:clickable="false"
                android:background="@drawable/selector_zhifu"/>

        </LinearLayout>
        <View style="@style/LineStyleE5E5E5" />

        <LinearLayout
            android:id="@+id/btn_weixin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10"
            android:gravity="center"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/icon_wei_xin"/>

            <TextView
                style="@style/FontStyleBlack"
                android:layout_marginLeft="@dimen/padding_10"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:text="@string/pay_weixin"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:checked="true"
                android:clickable="false"
                android:background="@drawable/selector_zhifu"/>

        </LinearLayout>

    </LinearLayout>

    <View style="@style/LineStyleE5E5E5" />

</LinearLayout>
